force-app/main/default/objects/CSAT__c/CSAT__c.object-meta.xml
<CustomObject>
    <label>CSAT</label>
    <nameField>
        <displayFormat>CSAT-{00000}</displayFormat>
        <label>CSAT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>