force-app/main/default/objects/CSAT__c/fields/Call_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Call_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSAT</relationshipName>
    <type>Lookup</type>
</CustomField>