force-app/main/default/objects/CSAT__c/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <label>Call Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>