force-app/main/default/objects/CSAT__c/fields/Case_RM__c.field-meta.xml
<CustomField>
    <fullName>Case_RM__c</fullName>
    <formula>TEXT(Case__r.RW_RM_Name__c)</formula>
    <label>Case RM</label>
    <type>Text</type>
</CustomField>