force-app/main/default/objects/CSAT__c/fields/CSAT_Aging__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Aging__c</fullName>
    <formula>Feedback_Received_Date__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>