force-app/main/default/objects/CSAT__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Account__r.Mobile_No__c</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>