force-app/main/default/objects/CSAT__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right( Mobile__c ,5))</formula>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>