force-app/main/default/objects/CSAT__c/fields/Reason_for_UnHappy__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_UnHappy__c</fullName>
    <label>Reason for UnHappy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>