force-app/main/default/objects/CSAT__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Responded</fullName>
                <default>true</default>
                <label>Not Responded</label>
            </value>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>UnHappy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>