force-app/main/default/objects/CSAT__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>